--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -14,10 +14,11 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Install uv
+        run: pip install uv
+
+      - name: Install dependencies with uv (requirements.txt)
+        run: uv pip install -r requirements.txt
 
       - name: Run tests with pytest
         run: |
