--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -15,11 +15,10 @@ jobs:
           python-version: '3.x'
 
       - name: Install uv
-        run: pip install uv
+        uses: astral-sh/setup-uv@v5
 
-      - name: Install dependencies with uv (requirements.txt)
-        run: uv pip install -r requirements.txt
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
 
       - name: Run tests with pytest
-        run: |
-          pytest tests/
+        run: uv run pytest tests
