--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
@@ -21,4 +21,4 @@ jobs:
         run: uv sync
 
       - name: Run tests with pytest
-        run: uv run pytest tests
+        run: uv run pytest
